--- a/chat/src/main/res/layout/item_activity_photo_preview.xml
+++ b/chat/src/main/res/layout/item_activity_photo_preview.xml
@@ -4,16 +4,15 @@
     android:layout_height="match_parent">
 
     <ProgressBar
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 
     <uk.co.senab.photoview.PhotoView
+        android:id="@+id/pv_item_activity_photo_preview_display"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/pv_item_activity_photo_preview_display"/>
+        android:layout_height="match_parent" />
 
 
 </RelativeLayout>
