--- a/chat/src/main/res/layout/activity_user_info.xml
+++ b/chat/src/main/res/layout/activity_user_info.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/chat_bg"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/chat_bg"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -22,36 +21,37 @@
             android:layout_centerVertical="true"
             android:text="头像"
             android:textColor="@color/base_color_text_grey"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/iv_user_info_avatar"
+        <com.example.commonlibrary.cusotomview.RoundAngleImageView
+            android:id="@+id/riv_user_info_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/head"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/custom_drawable_place_holder" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="昵称"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_nick"
@@ -61,29 +61,28 @@
             android:layout_centerVertical="true"
             android:text="姓名"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="帐号"
-            android:textSize="20sp"
-        />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_username"
@@ -93,29 +92,28 @@
             android:layout_centerVertical="true"
             android:text="帐号"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="地址"
-            android:textSize="20sp"
-        />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_address"
@@ -125,28 +123,28 @@
             android:layout_centerVertical="true"
             android:text="地址"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="性别"
-            android:textSize="20sp"
-        />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_sex"
@@ -156,29 +154,28 @@
             android:layout_centerVertical="true"
             android:text="女"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="学校"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_school"
@@ -187,28 +184,28 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
+        android:background="@drawable/recycler_divider" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="学院"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_user_info_college"
@@ -217,15 +214,13 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@drawable/recycler_divider"/>
-
-
+        android:background="@drawable/recycler_divider" />
 
 
     <Button
@@ -233,39 +228,39 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="25dp"
         android:background="@drawable/btn_login_selector"
         android:gravity="center"
         android:text="开始会话"
         android:textColor="@color/base_color_text_white"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_user_info_add_friend"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="25dp"
         android:background="@drawable/btn_login_selector"
         android:gravity="center"
         android:text="添加为好友"
         android:textColor="@color/base_color_text_white"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_user_info_add_black"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="25dp"
         android:background="@drawable/btn_logout_selector"
         android:gravity="center"
         android:text="添加为黑名单"
         android:textColor="@color/base_color_text_white"
         android:textSize="20sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
