--- a/commonlibrary/src/main/res/layout/header_layout.xml
+++ b/commonlibrary/src/main/res/layout/header_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:skin="http://schemas.android.com/tools"
+    xmlns:skin="http://schemas.android.com/android/skin"
     android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,8 +25,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:tag="skin"
-                app:srcCompat="@drawable/ic_arrow_left" />
+                app:srcCompat="@drawable/ic_arrow_left"
+                skin:enable="true" />
 
             <com.example.commonlibrary.cusotomview.RoundAngleImageView
                 android:id="@+id/riv_header_layout_icon"
@@ -45,7 +45,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/riv_header_layout_icon"
-                android:tag="skin"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="标题"
                 android:textColor="@color/custom_color_text_main"
                 android:textSize="16sp"
@@ -58,7 +59,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
-                android:tag="skin"
                 android:text="保存"
                 android:textColor="@color/custom_color_text_main"
                 android:textSize="16sp"
