--- a/news/src/main/res/drawable/custom_selector_text_selected.xml
+++ b/news/src/main/res/drawable/custom_selector_text_selected.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-<corners android:radius="30dp"/>
-    <solid android:color="@color/base_color_text_white"/>
-    <stroke android:color="#c416ff" android:width="2dp"/>
+    <corners android:radius="30dp" />
+    <solid android:color="@color/base_color_text_white" />
+    <stroke
+        android:width="2dp"
+        android:color="#faac2d" />
     <padding
         android:bottom="2dp"
         android:left="10dp"
         android:right="10dp"
-        android:top="2dp"/>
+        android:top="2dp" />
 
 </shape>
